# project_dilemma

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
algorithms/: tit_for_tat.py
config/: test.toml
docs/: simulations.md
examples/algorithms/: always_cooperate.py  always_defect.py  firm_but_fair.py  grim_trigger.py  grudge.py  pavlov.py  random_cooperation.py  simple.py  tit_for_tat.py  tit_for_two_tats.py  two_tits_for_tat.py
examples/config/: complete_generational_mss.toml  complete_generational_ss.toml  complete_mss.toml  complete_multiprocess_standard_simulation.toml  complete_ss.toml  complete_standard_simulation.toml  mutable_complete_generational_mss.toml  mutable_complete_generational_ss.toml  mutable_complete_mss.toml  mutable_complete_multiprocess_standard_simulation.toml  mutable_complete_ss.toml  mutable_complete_standard_simulation.toml  mutable_noisy_complete_generational_mss.toml  mutable_noisy_complete_generational_ss.toml  mutable_noisy_complete_mss.toml  mutable_noisy_complete_multiprocess_standard_simulation.toml  mutable_noisy_complete_ss.toml  mutable_noisy_complete_standard_simulation.toml  noisy_complete_generational_mss.toml  noisy_complete_generational_ss.toml  noisy_complete_mss.toml  noisy_complete_multiprocess_standard_simulation.toml  noisy_complete_ss.toml  noisy_complete_standard_simulation.toml  pytest.toml
results/: test.json
templates/: algorithm_template.py  generational_simulation_template.py  simulation_template.py
tests/: integration_test.py  simulation_integration_test.py
(+63 files in other folders)
